@@ -2,6 +2,7 @@
 * HQ:main screen - use full width of the browser window
 * check_location: return error when zone have neither key nor message defined
 * Improve LOCATION_CHECK events
+* HQ:set position screen display also matching zones
 
 rel 20.4.0
 * fix rank table is generation (#25)
